# tinychart

./: LICENSE  README.md  tinychart.cabal
src/: CrossPlots.hs  PlotUtils.hs  Plots.hs  TimeSeriesPlot.hs
