name:                tinychart
version:             0.1.0.0
synopsis:            A library for simple plots to easily visualise data.
description:         tinyplot is a library for simple, no thrills plots. It aims to provide an easy interface on-top off the Chart package to visualise data for standard diagrams.
homepage:            https://github.com/jonathankochems/tinychart#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Kochems
maintainer:          jonathan.kochems@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite tinychart-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tinychart
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jonathankochems/tinychart
